Change POPULAR badge to primary color and add subtle background to selected pack

--- a/public/admin.html
+++ b/public/admin.html
@@ -770,8 +770,8 @@
                 : `1px solid ${colors.border}`;
             
             previewHTML += `
-                <div style="border: ${borderStyle}; border-radius: 8px; padding: 12px; cursor: pointer; background: transparent; transition: all 0.2s;">
-                    ${pack.highlight ? `<div style="background: ${colors.highlight}; color: #000; font-size: 11px; font-weight: bold; padding: 4px 8px; border-radius: 4px; display: inline-block; margin-bottom: 8px;">⭐ MÁS ELEGIDO</div>` : ''}
+                <div style="border: ${borderStyle}; border-radius: 8px; padding: 12px; cursor: pointer; background: ${idx === 0 ? colors.primary + '15' : 'transparent'}; transition: all 0.2s;">
+                    ${pack.highlight ? `<div style="background: ${colors.primary}; color: #fff; font-size: 11px; font-weight: bold; padding: 4px 8px; border-radius: 4px; display: inline-block; margin-bottom: 8px;">⭐ MÁS ELEGIDO</div>` : ''}
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <div style="flex: 1;">
                             <div style="color: ${colors.text}; font-weight: bold; font-size: 14px;">${pack.label}</div>
